quick fix footer overlap

--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@
   --bright-yellow: hsl(71, 73%, 54%);
   --light-gray: hsl(204, 43%, 93%);
   --grayish-blue: hsl(218, 22%, 67%);
+
+  --box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
+html,body{
+  height: 100%;
+}
 body{
   font-size: 16px;
   font-family: 'Karla', sans-serif;
@@ -24,10 +28,9 @@ body{
   display: flex;
   flex-direction: column;
   flex: 1;
-  max-height: 80vh;
   width: 90vw;
   border-radius: 10px;
-  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  box-shadow: var(--box-shadow);
 }
 section{
   padding: 20px;
